[tool.poetry]
name = "pytasched"
version = "1.0.0"
description = "Python Task Scheduler"
authors = ["Janne Enberg <janne.enberg@lietu.net>"]

[tool.poetry.dependencies]
python = "^3.6"
pymongo = "3.10.1"
pytest = "4.6.9"
mock = "1.3.0"
mongomock = "3.19.0"
celery = ">3,<4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
